[package]
name = "chikatetsu"
description = "An actor framework for Tokio"
version = "0.1.0"
authors = ["EthanYidong <ethanyidong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chikatetsu-macros = { path = "macros" }

tokio = { features = ["full"], version = "1" }
async-trait = "0.1"

[workspace]
members = ["macros", "examples/*"]