[package]
name = "chikatetsu-macros"
description = "Macros for the chikatetsu actor framework"
version = "0.1.0"
authors = ["EthanYidong <ethanyidong@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/EthanYidong/chikatetsu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"

proc-macro2 = "1.0"
