[package]
name = "chikatetsu-simple-example"
version = "0.1.0"
authors = ["EthanYidong <ethanyidong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chikatetsu = { path = "../../" }

tokio = { version = "1.0", features = ["full"] }